// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BlogForm /> Should render correctly 1`] = `
<div>
  <div
    class=""
  >
    <label
      class="forms__component forms__component__label"
      for="title_FORM_ID"
    >
      Title
    </label>
    <div
      class="sc-hKMtZM fMOyKb forms__component forms__component__text-box"
      placeholder="Title"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-papXJ cgekWF"
        id="title_FORM_ID"
        name="Title"
        value=""
      />
      <svg
        class="sc-dkzDqf ibQdgf sc-jqUVSM hfMxIT"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="tags_FORM_ID"
    >
      Tags
    </label>
    <div
      class="sc-hKMtZM fMOyKb forms__component forms__component__text-box"
      placeholder="Tags"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-papXJ cgekWF"
        id="tags_FORM_ID"
        name="Tags"
        value=""
      />
      <svg
        class="sc-dkzDqf ibQdgf sc-jqUVSM hfMxIT"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="blogImage_FORM_ID"
    >
      Blog image
    </label>
    <div
      class="sc-hKMtZM fMOyKb forms__component forms__component__text-box"
      placeholder="Blog image"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-papXJ cgekWF"
        id="blogImage_FORM_ID"
        name="Blog image"
        value=""
      />
      <svg
        class="sc-dkzDqf ibQdgf sc-jqUVSM hfMxIT"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="publishedTimestamp_FORM_ID"
    >
      Published timestamp
    </label>
    <div
      class="sc-hKMtZM fMOyKb forms__component forms__component__text-box"
      placeholder="Published timestamp"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-papXJ cgekWF"
        id="publishedTimestamp_FORM_ID"
        name="Published timestamp"
        value=""
      />
      <svg
        class="sc-dkzDqf ibQdgf sc-jqUVSM hfMxIT"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="blogCardDate_FORM_ID"
    >
      Blog card date override
    </label>
    <div
      class="sc-hKMtZM fMOyKb forms__component forms__component__text-box"
      placeholder="Blog card date override"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-papXJ cgekWF"
        id="blogCardDate_FORM_ID"
        name="Blog card date override"
        value=""
      />
      <svg
        class="sc-dkzDqf ibQdgf sc-jqUVSM hfMxIT"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-eCYdqJ hGxLib forms__component"
      id="light_FORM_ID"
    >
      <div
        class="sc-jSMfEi gYtFJK"
      >
        <input
          aria-invalid="false"
          aria-label="Light"
          class="sc-gKXOVf XFKMS"
          name="Light"
          type="checkbox"
        />
        <svg
          class="sc-dkzDqf ibQdgf sc-iBkjds iaHuiq"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="sc-ftvSup jziudT"
      >
        Light
      </div>
    </label>
    <label
      class="sc-eCYdqJ hGxLib forms__component"
      id="published_FORM_ID"
    >
      <div
        class="sc-jSMfEi gYtFJK"
      >
        <input
          aria-invalid="false"
          aria-label="Published"
          class="sc-gKXOVf XFKMS"
          name="Published"
          type="checkbox"
        />
        <svg
          class="sc-dkzDqf ibQdgf sc-iBkjds iaHuiq"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="sc-ftvSup jziudT"
      >
        Published
      </div>
    </label>
    <label
      class="sc-eCYdqJ hGxLib forms__component"
      id="showInBlogsList_FORM_ID"
    >
      <div
        class="sc-jSMfEi gYtFJK"
      >
        <input
          aria-invalid="false"
          aria-label="Show in blogs list"
          class="sc-gKXOVf XFKMS"
          name="Show in blogs list"
          type="checkbox"
        />
        <svg
          class="sc-dkzDqf ibQdgf sc-iBkjds iaHuiq"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="sc-ftvSup jziudT"
      >
        Show in blogs list
      </div>
    </label>
    <label
      class="sc-eCYdqJ hGxLib forms__component"
      id="showInTravelBlogsList_FORM_ID"
    >
      <div
        class="sc-jSMfEi gYtFJK"
      >
        <input
          aria-invalid="false"
          aria-label="Show in travel blogs list"
          class="sc-gKXOVf XFKMS"
          name="Show in travel blogs list"
          type="checkbox"
        />
        <svg
          class="sc-dkzDqf ibQdgf sc-iBkjds iaHuiq"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="sc-ftvSup jziudT"
      >
        Show in travel blogs list
      </div>
    </label>
    <label
      class="forms__component forms__component__label"
      for="blogImageBorderColor_FORM_ID"
    >
      Blog image border color
    </label>
    <div
      class="sc-hKMtZM fMOyKb forms__component forms__component__text-box"
      placeholder="Blog image border color"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-papXJ cgekWF"
        id="blogImageBorderColor_FORM_ID"
        name="Blog image border color"
        value=""
      />
      <svg
        class="sc-dkzDqf ibQdgf sc-jqUVSM hfMxIT"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="content_FORM_ID"
    >
      Content
    </label>
    <div
      class="sc-hKMtZM fMOyKb forms__component forms__component__text-box"
      placeholder="Content"
    >
      <textarea
        aria-disabled="false"
        aria-invalid="false"
        class="sc-kDDrLX dxNyur"
        id="content_FORM_ID"
        name="Content"
      />
      <svg
        class="sc-dkzDqf ibQdgf sc-jqUVSM hfMxIT"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy forms__component forms__component__button"
      type="button"
    >
      <span
        class="button__child"
      />
    </button>
  </div>
</div>
`;

exports[`<BlogForm /> Should render correctly with no blog id 1`] = `
<div>
  <div
    class=""
  >
    <label
      class="forms__component forms__component__label"
      for="requestedId_FORM_ID"
    >
      Requested ID
    </label>
    <div
      class="sc-hKMtZM fMOyKb forms__component forms__component__text-box"
      placeholder="Requested ID"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-papXJ cgekWF"
        id="requestedId_FORM_ID"
        name="Requested ID"
        value=""
      />
      <svg
        class="sc-dkzDqf ibQdgf sc-jqUVSM hfMxIT"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="title_FORM_ID"
    >
      Title
    </label>
    <div
      class="sc-hKMtZM fMOyKb forms__component forms__component__text-box"
      placeholder="Title"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-papXJ cgekWF"
        id="title_FORM_ID"
        name="Title"
        value=""
      />
      <svg
        class="sc-dkzDqf ibQdgf sc-jqUVSM hfMxIT"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="tags_FORM_ID"
    >
      Tags
    </label>
    <div
      class="sc-hKMtZM fMOyKb forms__component forms__component__text-box"
      placeholder="Tags"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-papXJ cgekWF"
        id="tags_FORM_ID"
        name="Tags"
        value=""
      />
      <svg
        class="sc-dkzDqf ibQdgf sc-jqUVSM hfMxIT"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="blogImage_FORM_ID"
    >
      Blog image
    </label>
    <div
      class="sc-hKMtZM fMOyKb forms__component forms__component__text-box"
      placeholder="Blog image"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-papXJ cgekWF"
        id="blogImage_FORM_ID"
        name="Blog image"
        value=""
      />
      <svg
        class="sc-dkzDqf ibQdgf sc-jqUVSM hfMxIT"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="publishedTimestamp_FORM_ID"
    >
      Published timestamp
    </label>
    <div
      class="sc-hKMtZM fMOyKb forms__component forms__component__text-box"
      placeholder="Published timestamp"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-papXJ cgekWF"
        id="publishedTimestamp_FORM_ID"
        name="Published timestamp"
        value=""
      />
      <svg
        class="sc-dkzDqf ibQdgf sc-jqUVSM hfMxIT"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="blogCardDate_FORM_ID"
    >
      Blog card date override
    </label>
    <div
      class="sc-hKMtZM fMOyKb forms__component forms__component__text-box"
      placeholder="Blog card date override"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-papXJ cgekWF"
        id="blogCardDate_FORM_ID"
        name="Blog card date override"
        value=""
      />
      <svg
        class="sc-dkzDqf ibQdgf sc-jqUVSM hfMxIT"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-eCYdqJ hGxLib forms__component"
      id="light_FORM_ID"
    >
      <div
        class="sc-jSMfEi gYtFJK"
      >
        <input
          aria-invalid="false"
          aria-label="Light"
          class="sc-gKXOVf XFKMS"
          name="Light"
          type="checkbox"
        />
        <svg
          class="sc-dkzDqf ibQdgf sc-iBkjds iaHuiq"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="sc-ftvSup jziudT"
      >
        Light
      </div>
    </label>
    <label
      class="sc-eCYdqJ hGxLib forms__component"
      id="published_FORM_ID"
    >
      <div
        class="sc-jSMfEi gYtFJK"
      >
        <input
          aria-invalid="false"
          aria-label="Published"
          class="sc-gKXOVf XFKMS"
          name="Published"
          type="checkbox"
        />
        <svg
          class="sc-dkzDqf ibQdgf sc-iBkjds iaHuiq"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="sc-ftvSup jziudT"
      >
        Published
      </div>
    </label>
    <label
      class="sc-eCYdqJ hGxLib forms__component"
      id="showInBlogsList_FORM_ID"
    >
      <div
        class="sc-jSMfEi gYtFJK"
      >
        <input
          aria-invalid="false"
          aria-label="Show in blogs list"
          class="sc-gKXOVf XFKMS"
          name="Show in blogs list"
          type="checkbox"
        />
        <svg
          class="sc-dkzDqf ibQdgf sc-iBkjds iaHuiq"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="sc-ftvSup jziudT"
      >
        Show in blogs list
      </div>
    </label>
    <label
      class="sc-eCYdqJ hGxLib forms__component"
      id="showInTravelBlogsList_FORM_ID"
    >
      <div
        class="sc-jSMfEi gYtFJK"
      >
        <input
          aria-invalid="false"
          aria-label="Show in travel blogs list"
          class="sc-gKXOVf XFKMS"
          name="Show in travel blogs list"
          type="checkbox"
        />
        <svg
          class="sc-dkzDqf ibQdgf sc-iBkjds iaHuiq"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="sc-ftvSup jziudT"
      >
        Show in travel blogs list
      </div>
    </label>
    <label
      class="forms__component forms__component__label"
      for="blogImageBorderColor_FORM_ID"
    >
      Blog image border color
    </label>
    <div
      class="sc-hKMtZM fMOyKb forms__component forms__component__text-box"
      placeholder="Blog image border color"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-papXJ cgekWF"
        id="blogImageBorderColor_FORM_ID"
        name="Blog image border color"
        value=""
      />
      <svg
        class="sc-dkzDqf ibQdgf sc-jqUVSM hfMxIT"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="content_FORM_ID"
    >
      Content
    </label>
    <div
      class="sc-hKMtZM fMOyKb forms__component forms__component__text-box"
      placeholder="Content"
    >
      <textarea
        aria-disabled="false"
        aria-invalid="false"
        class="sc-kDDrLX dxNyur"
        id="content_FORM_ID"
        name="Content"
      />
      <svg
        class="sc-dkzDqf ibQdgf sc-jqUVSM hfMxIT"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy forms__component forms__component__button"
      type="button"
    >
      <span
        class="button__child"
      />
    </button>
  </div>
</div>
`;
